<resources>
    <string name="app_name">Attendance</string>
    <string name="Stay_Cool_And_Be_At_School.">Stay Cool And Be At School</string>
    <string name="splashiconimage">splashiconimage</string>
    <string name="signup">SignUp</string>
    <string name="enter_your_sapid">Enter your SapID</string>
    <string name="enter_your_email_address">Enter your Email address</string>
    <string name="submit">Submit</string>
    <string name="sign">Sign</string>
    <string name="up">up</string>
    <string name="in">in</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="create_a_password">Create a password</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="forget">Forget</string>
    <string name="password">Password</string>
    <string name="get_password">Get Password</string>
    <string name="go_back">Go back</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="enter_your_college_email_address">Enter your College email address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="loading">______</string>
    <string name="tushar_goyal_bhavuk_baluja">Tushar Goyal || Bhavuk Baluja</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_are_late">You are late.</string>
    <string name="no_student_is_present">No student is Present</string>
    <string name="student_name">Student name</string>
    <string name="join_time">Join time</string>
    <string name="present_students">Present students</string>
    <string name="absent_students">Absent students</string>
    <string name="add_attendance">Add attendance</string>
    <string name="enter_sapid">Enter SapID</string>
    <string name="add">Add</string>
    <string name="you_haven_t_create_class">You haven\'t create class</string>
    <string name="upload">Upload</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="if_locations_are_paused_then_click_on_this_verify_button">If locations are paused then click on this verify button</string>

    <string-array name="addattendancedropdown">
        <item>SapId</item>
        <item>Name</item>
    </string-array>

</resources>