<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".t5_forget_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/forgetpasswordpagelinear"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp"
            >

            <LinearLayout
                android:id="@+id/forgetpasswordheadinglinear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/forgetheadText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titilliumwebbold"
                    android:gravity="center"
                    android:text="@string/forget"
                    android:textColor="#000000"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/upHeadText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titilliumwebbold"
                    android:gravity="center"
                    android:text="@string/password"
                    android:textColor="@color/teal_700"
                    android:textSize="35sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <ImageView
                android:id="@+id/loginPageImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/splashvector"
                />
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="vertical"-->
<!--                android:gravity="bottom|center"-->
<!--                android:paddingBottom="72dp"-->
<!--                >-->
            <EditText
                android:id="@+id/emailinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/eduttextborder5"
                android:ems="10"
                android:fontFamily="@font/titilliumweregular"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:textColor="#535353"
                android:textColorHint="#BAB4B4"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/getpasswordbutton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/titilliumwebbold"
                android:text="@string/get_password"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="@color/teal_700"
                app:cornerRadius="25dp" />

                <TextView
                    android:id="@+id/gobackbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/titilliumweregular"
                    android:text="@string/go_back"
                    android:textColor="@color/teal_700"
                    android:textFontWeight="600"
                    android:textSize="17sp" />

        </LinearLayout>

<!--        </LinearLayout>-->
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>